# tcc-mba-usp-esalq-dsa

./: .gitignore  0-projeto-de-pesquisa.qmd  1-resultados-preliminares.qmd  2-entrega-final.qmd  README.md  projeto-de-pesquisa.qmd  pyproject.toml  tcc-mba-usp-esalq-dsa.code-workspace
codigo/: 0-collect-datasus-sinan-dengue.py  1-process-dbc-files.R  10-incidencia-regiao-boxplots.R  2-data-wrangling.py  2-malha-geografica.py  2-malha-municipal.py  2-populacao.py  3-malha-geografica.py  4-plots.py  4-populacao.py  5-dados-mapas.py  6-dados-mapas.py  6-plots-mapas-dengue-ano.py  7-plots-mapas-dengue-ano.py  7-seasonal-plots.R  8-plot-pyramid-chart.R  9-incidencia-uf-plots.R  requirements.txt
includes/0-projeto/: 1-introducao.qmd  3-material-e-metodos.qmd  4-resultados-esperados.qmd  5-cronograma-de-atividades.qmd  referencias.qmd
includes/1-prelim/: 0-introducao.qmd  1-material-e-metodos.qmd  2-resultados-preliminares.qmd  3-conclusao.qmd  referencias.qmd
includes/projeto/: 2-objetivo.qmd
src/tcc_mba_usp_esalq_dsa/: __init__.py
