[project]
name = "tcc-mba-usp-esalq-dsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasus-fetcher>=0.3.3",
    "geopandas>=1.0.1",
    "openpyxl>=3.1.5",
    "pyarrow>=18.0.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
